--- a/config.toml
+++ b/config.toml
@@ -62,7 +62,7 @@ paginate = 5
     missingBackButtonLabel = "Back to home page"
 
     [languages.en.params.logo]
-      logoText = "Terminal"
+      logoText = "dym.li"
       logoHomeLink = "/"
 
     [languages.en.menu]
